fix: get button mobile padding

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -114,10 +114,17 @@
   background-color: colors.$off_white;
   color: colors.$off_black;
 
+  border: 2px solid transparent;
+
   &:hover {
     background-color: transparent;
     color: colors.$off_white;
+    border: 2px solid colors.$off_white;
     transition: all 0.2s;
+  }
+
+  @include device(tablet) {
+    padding: 0 0.5rem;
   }
 }
 
