--- a/src/sections/Content/styles.module.scss
+++ b/src/sections/Content/styles.module.scss
@@ -154,4 +154,8 @@
 .getButton {
   @include button-primary--fill;
   gap: 1rem;
+
+  @include device(mobile) {
+    gap: 0.5rem;
+  }
 }
